--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.entities": "1.0.16",
     "com.unity.entities.graphics": "1.0.16",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.ide.rider": "3.0.27",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.physics": "1.0.16",
     "com.unity.render-pipelines.high-definition": "14.0.9",
